--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "zephir/langspec",
+  "name": "zephir-lang/langspec",
   "description": "Zephir Language Specifications",
   "keywords": [
     "zephir",
